--- a/src/style.css
+++ b/src/style.css
@@ -51,7 +51,7 @@ body {
   background: #2e2e2ec9;
   color: #ececec;
   z-index: 55;
-  text-align: center;
+  text-align: start;
 }
 
 .filters h2 {
@@ -82,6 +82,7 @@ body {
 .filter input:focus,
 .filter select:focus {
   border: 2px solid #00f7ff;
+  transition: 0.2s;
 }
 
 .pokemon-list {
@@ -122,7 +123,7 @@ body {
   border-radius: 5px;
 }
 
-.pokemon h2{
+.pokemon h2 {
   position: sticky;
   top: 0;
   font-size: 2rem;
@@ -131,7 +132,6 @@ body {
   z-index: 15;
   padding: 20px 0;
 }
-
 
 .not-found {
   width: 100%;
@@ -152,7 +152,8 @@ body {
 .not-found p {
   font-family: "Nunito";
   font-size: 1.4rem;
-  color: rgb(14, 14, 14);
+  color: rgb(255, 255, 255);
+  text-shadow: -1px 1px 5px black;
 }
 
 @media screen and (max-width: 790px) {
@@ -186,14 +187,11 @@ body {
     backdrop-filter: blur(30px);
     overflow: hidden;
     transition: 0.4s;
+    text-align: center;
   }
 
   .filters h2 {
     margin-bottom: 100px;
-  }
-
-  .filter {
-    text-align: start;
   }
 
   .pokemon-list {
